<resources>
    <string name="app_name">1uppro</string>
    <string name="take_photo">Take Photo</string>
    <string name="record_video">Record from camera</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="app_logo">applogo</string>
    <string name="icon_image">Icon Image</string>
    <string name="some_error">Some Error Occurred!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="back_icon">Back Icon</string>
    <string name="create_account">Create Account</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registration">Registration</string>
    <string name="register_line">To best serve you, please tell us a little about yourself. We"'"ll only ask for this information once.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="userpassword">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="denied_location_permission">You denied this location permission so you can not add your store address without this permission please go to setting and enable location permission</string>
    <string name="no_network_provider">no network provider is enabled</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="forget_pass_line">We just need your registered email address to send you password reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_name">Your Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="past_videos">Past Videos</string>
    <string name="following">Following</string>
    <string name="friend">Friends</string>
    <string name="message">Message</string>
    <string name="about_us">About Us</string>
    <string name="help_terms_conditions">Help/Terms &amp; Conditions</string>
    <string name="settings">Settings</string>
    <string name="first_image">First Image</string>
    <string name="my_profile">My Profile</string>
    <string name="second_image">Second Image</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_fragment">profile fragment</string>
    <string name="denied_media_title">Denied Permission to Access media</string>
    <string name="denied_media_msg">You denied this media permission so you can not access media images or files without this permission please go to setting and enable media permission</string>
    <string name="go_to_setting">go to setting</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="save">save</string>
    <string name="new_password_text">New password must be between 8–20 characters</string>
    <string name="play_of_the_week">Play of the week</string>
    <string name="create_challenge">Create Challenge</string>
    <string name="callouts">Callouts</string>
    <string name="edittext_without_space">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="username_without_space">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="please_make_sure_select_category">Please make sure to select the category first before filling out the rest of this form!</string>
    <string name="videos_categories">Videos Categories</string>
    <string name="username_of_challenger">Username of Challenger:</string>
    <string name="challenge_length">Challenge Length</string>
    <string name="challenge_length_title">Challenge Length:</string>

    <string name="select_category">Select Category</string>
    <string name="choose_length">Choose length</string>
    <string name="video_orientation">Video Orientation:</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="rules">Rules:</string>
    <string name="type_rules_here">Type Rules here ..</string>
    <string name="open_challenge_no_challenger_yet">Open Challenge (No Challenger Yet)</string>
    <string name="submit">Submit</string>
    <string name="days_14">14 Days</string>
    <string name="days_30">30 Days(Default)</string>
    <string name="days_60">60 Days</string>
    <string name="days">Choose Days</string>
    <string name="video_category">Video Category</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="abc">Abc</string>
    <string name="google_signin">Google Signin</string>
    <string name="upload_video">Upload Video</string>
    <string name="title">Title:</string>
    <string name="description">Description</string>
    <string name="privacy_status">Privacy Status:</string>
    <string name="choose_file">No file choosen</string>
    <string name="choose_file_btn">Choose File</string>
    <string name="by_uploading_viedo_terms">By uploading a video, you certify that you own all rights to the content or that you are authorized by the owner to make the content publicly available on YouTube,and that it otherwise complies with the YouTube Terms of service located at</string>
    <string name="terms_link">http://www.youtube.com/t/terms</string>
    <string name="public_privacy">Public</string>
    <string name="private_privacy">Private</string>
    <string name="api_key">AIzaSyAx0qDHdHixW9aDejKUA0StfDEGslilTwY</string>
    <string name="auth_key">725113402961-va4aj7dtnakfpukt1l8jmtcscgvevkq8.apps.googleusercontent.com</string>
    <string name="youtube_icon">youtube icon</string>
    <string name="click_here_to_accept_challenge">Click here to Accept Challenge</string>
    <string name="vote_here">Vote Here!</string>
    <string name="overall_score">Overall Score:</string>
    <string name="you_ve_been_called">You\'ve been called out! What are you gonna do about it?</string>
    <string name="accept_challenge">Accept Challenge</string>
    <string name="wuss_out">Wuss Out</string>
    <string name="select_category_spinner">Select Category to follow</string>
    <string name="i_m_following">I\'m following:</string>
    <string name="unfollow">Unfollow</string>
    <string name="following_categories">Following Categories</string>
    <string name="me">Me</string>
    <string name="upicon">upicon</string>
    <string name="hatericon">hatericon</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="username_or_email">Username or Email</string>
    <string name="friend_btn">FRIENDS</string>
    <string name="requests">REQUESTS</string>
    <string name="update">Update</string>
    <string name="accept_request">Accept Request</string>
    <string name="profile_updated_done">Profile Updated Successfully</string>
    <string name="profile_image_updated_done">Profile Image Updated Successfully</string>
    <string name="status">Status</string>
    <string name="challenge_taken">Challenge Taken</string>
    <string name="average_score">Average Score</string>
    <string name="challenge_follow">Challenge Follow</string>
    <string name="video_count">Video Count</string>
    <string name="challenge_given">Challenge Given</string>
    <string name="view_profile">View Profile</string>
    <string name="send_message">Send Message</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="write_your_message">Write your message</string>
    <string name="time_just_now">Just now</string>
    <string name="time_minute_ago">a min ago</string>
    <string name="time_min_ago">min ago</string>
    <string name="time_an_hr_ago">an hour ago</string>
    <string name="time_hr_ago">hours ago</string>
    <string name="time_yesterday">yesterday</string>
    <string name="time_day_ago">days ago</string>
    <string name="time_today">today</string>
    <string name="your_message">Your Message</string>
    <string name="subject_chat">Subject:</string>
    <string name="message_detail">Message Detail</string>
    <string name="unread_msg">Unread</string>
    <string name="reply">Reply</string>
    <string name="youtube_video_uploading_failed">Uploading failed..! \n Something went wrong or please make sure this account has a channel on YouTube</string>
</resources>
