<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_pastvideos"
            android:icon="@drawable/past_videos_icon"
            android:title="@string/past_videos" />
        <item
            android:id="@+id/nav_following"
            android:icon="@drawable/following_icon"
            android:title="@string/following" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/profile_icon"
            android:title="@string/friend" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/message_icon"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/aboutus"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/help_icon"
            android:title="@string/help_terms_conditions" />
        <item
            android:id="@+id/nav_playweek"
            android:icon="@drawable/playweekicon"
            android:title="@string/play_of_the_week" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settingsicon"
            android:title="@string/settings" />
    </group>
</menu>
