<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtheme"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:id="@+id/signuplayout"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/leftguideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_3.5x"
            app:layout_constraintLeft_toLeftOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/rightguideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_3.5x"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/signupback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_icon"
            android:background="@drawable/backwhiteicon"
            android:layout_marginTop="@dimen/margin_2x"
            android:layout_marginStart="@dimen/margin_2x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/margin_6x"
            android:layout_height="@dimen/margin_6x"
            android:layout_marginTop="?android:actionBarSize"
            android:contentDescription="@string/icon_image"
            android:background="@drawable/signupicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/textview_white_color"
            android:textAlignment="center"
            android:padding="@dimen/margin_0.5x"
            android:textSize="@dimen/text_2x"
            android:fontFamily="@font/opensanssemibold"
            android:layout_marginTop="@dimen/margin_1x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_line"
            android:textColor="@color/sub_title_color"
            android:textAlignment="center"
            android:paddingStart="@dimen/margin_1.5x"
            android:paddingEnd="@dimen/text_1.5x"
            android:fontFamily="@font/opensansregular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:backgroundTint="@color/light_grey"
            android:digits="@string/username_without_space"
            android:fontFamily="@font/opensansregular"
            android:textColor="@color/edittext_color"
            android:textColorHint="@color/edittext_hint_color"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/text_1.5x"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_1.5x"
            android:ems="10"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textCursorDrawable="@null"
            android:fontFamily="@font/opensansregular"
            android:textColor="@color/edittext_color"
            android:textColorHint="@color/edittext_hint_color"
            android:backgroundTint="@color/light_grey"
            android:textSize="@dimen/text_1.5x"
            android:maxLines="1"
            android:hint="@string/first_name"
            android:padding="@dimen/text_1.5x"
            android:ems="10"
            android:imeOptions="actionNext"
            android:digits="@string/edittext_without_space"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:fontFamily="@font/opensansregular"
            android:textColor="@color/edittext_color"
            android:textColorHint="@color/edittext_hint_color"
            android:backgroundTint="@color/light_grey"
            android:textSize="@dimen/text_1.5x"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:hint="@string/last_name"
            android:padding="@dimen/text_1.5x"
            android:ems="10"
            android:imeOptions="actionNext"
            android:digits="@string/edittext_without_space"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/firstname" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@null"
            android:fontFamily="@font/opensansregular"
            android:textColor="@color/edittext_color"
            android:textColorHint="@color/edittext_hint_color"            android:backgroundTint="@color/light_grey"
            android:textSize="@dimen/text_1.5x"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:padding="@dimen/text_1.5x"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/lastname" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:textCursorDrawable="@null"
            android:fontFamily="@font/opensansregular"
            android:textColor="@color/edittext_color"
            android:textColorHint="@color/edittext_hint_color"            android:backgroundTint="@color/light_grey"
            android:textSize="@dimen/text_1.5x"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/userpassword"
            android:padding="@dimen/text_1.5x"
            android:ems="10"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="0dp"
            android:textCursorDrawable="@null"
            android:fontFamily="@font/opensansregular"
            android:textColor="@color/edittext_color"
            android:textColorHint="@color/edittext_hint_color"            android:backgroundTint="@color/light_grey"
            android:textSize="@dimen/text_1.5x"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:padding="@dimen/text_1.5x"
            android:ems="10"
            android:imeOptions="actionDone"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/signupbtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_selector"
            android:fontFamily="@font/opensanssemibold"
            android:text="@string/register"
            android:textColor="@color/btn_text_color"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="?android:actionBarSize"
            app:layout_constraintEnd_toStartOf="@+id/rightguideline"
            app:layout_constraintStart_toStartOf="@+id/leftguideline"
            app:layout_constraintTop_toBottomOf="@+id/confirmpass"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/signupbtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>