<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/create_challenge_bg"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineleftinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_2x" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinerightinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_2x" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/opensanssemibold"
        android:paddingBottom="@dimen/margin_1x"
        android:paddingEnd="@dimen/margin_1x"
        android:paddingStart="@dimen/margin_1x"
        android:paddingTop="@dimen/margin_0.5x"
        android:textColor="@color/create_challenge_sub_text"
        android:text="@string/please_make_sure_select_category"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/create_challenge_video_text"
        android:paddingBottom="@dimen/margin_0.5x"
        android:paddingTop="@dimen/margin_0.5x"
        android:text="@string/videos_categories"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/selectcategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/whitebackgroundbtn"
        android:drawableEnd="@drawable/dropdownicon"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/create_challenge_hint_text"
        android:padding="@dimen/text_1x"
        android:text="@string/select_category"
        app:layout_constraintEnd_toStartOf="@+id/guidelinerightinner"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_0.5x"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/create_challenge_video_text"
        android:paddingBottom="@dimen/margin_0.5x"
        android:paddingTop="@dimen/margin_0.5x"
        android:text="@string/username_of_challenger"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/selectcategory" />

    <EditText
        android:id="@+id/challengername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/whitebackgroundbtn"
        android:fontFamily="@font/opensansregular"
        android:padding="@dimen/text_1x"
        android:hint="@string/abc"
        android:inputType="text"
        android:textSize="@dimen/text_1.5x"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:textColorHint="@color/edittext_hint_color"
        app:layout_constraintEnd_toStartOf="@+id/guidelinerightinner"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_0.5x"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/create_challenge_video_text"
        android:paddingBottom="@dimen/margin_0.5x"
        android:paddingTop="@dimen/margin_0.5x"
        android:text="@string/challenge_length_title"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/challengername" />

    <TextView
        android:id="@+id/challengelength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/whitebackgroundbtn"
        android:drawableEnd="@drawable/dropdownicon"
        android:padding="@dimen/text_1x"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/create_challenge_hint_text"
        app:layout_constraintEnd_toStartOf="@+id/guidelinerightinner"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_0.5x"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/create_challenge_video_text"
        android:paddingBottom="@dimen/margin_0.5x"
        android:paddingTop="@dimen/margin_0.5x"
        android:text="@string/video_orientation"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/challengelength" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/whitebackgroundbtn"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/create_challenge_video_text"
        android:orientation="horizontal"
        android:padding="@dimen/margin_0.5x"
        app:layout_constraintEnd_toStartOf="@+id/guidelinerightinner"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_1x"
            android:textColor="@color/create_challenge_video_text"
            android:id="@+id/horizontalradio"
            android:text="@string/horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verticalradio"
            android:checked="true"
            android:textColor="@color/create_challenge_video_text"
            android:buttonTint="@color/medium_grey"
            android:text="@string/vertical" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_0.5x"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/create_challenge_video_text"
        android:paddingBottom="@dimen/margin_0.5x"
        android:paddingTop="@dimen/margin_0.5x"
        android:text="@string/rules"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    <EditText
        android:id="@+id/rules_edit_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_12.5x"
        android:background="@android:color/white"
        android:fontFamily="@font/opensansregular"
        android:gravity="start"
        android:hint="@string/type_rules_here"
        android:inputType="text|textMultiLine"
        android:maxLength="500"
        android:minHeight="@dimen/margin_7x"
        android:overScrollMode="always"
        android:padding="@dimen/margin_1x"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColorHint="@color/edittext_hint_color"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toStartOf="@+id/guidelinerightinner"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1x"
        android:fontFamily="@font/opensanssemibold"
        android:text="@string/open_challenge_no_challenger_yet"
        android:textColor="@color/open_challenge_text"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/rules_edit_text"
        tools:targetApi="lollipop"
        android:checked="false"
        android:padding="@dimen/margin_0.5x"

        android:button="@drawable/checkboxselector"
        />

    <Button
        android:id="@+id/createchallengebtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1.5x"
        android:background="@drawable/login_button_selector"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:fontFamily="@font/opensanssemibold"
        android:textColor="@color/btn_text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelinerightinner"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_0.5x"
        app:layout_constraintEnd_toStartOf="@+id/guidelinerightinner"
        app:layout_constraintStart_toStartOf="@+id/guidelineleftinner"
        app:layout_constraintTop_toBottomOf="@+id/createchallengebtn"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>